<resources>
    <string name="app_name">BudgetAS</string>
    <string name="addTitle">出費の追加</string>
    <string name="month">表示したい月</string>
    <string name="addButton">追加</string>
    <string name="t1">日　　付　　：　</string>
    <string name="day">2021/12/1</string>
    <string name="t2">カテゴリー　：　</string>
    <string name="category">選択してください</string>
    <string name="t3">タイトル　　：　</string>
    <string name="detail">20文字以内</string>
    <string name="t4">メ　　モ　　：　</string>
    <string name="memo">200文字以内</string>
    <string name="t5">金　　額　　：　</string>
    <string name="money">入力必須</string>
    <string name="t6">支払方法　　：　</string>
    <string name="t7">管理番号　　：　</string>
    <string name="t8">　</string>
    <string name="payment">選択してください</string>
    <string name="d1"> </string>
    <string name="s1">　</string>
    <string name="data1">データカテゴリー</string>
    <string name="cancel">キャンセル</string>
    <string name="reg">登録</string>
    <string name="editTitle">変更・削除</string>
    <string name="deleteButton">削除</string>
    <string name="editButton">変更</string>
    <string name="dialog_title">データの削除</string>
    <string name="dialog_button_ok">削除</string>
    <string name="dialog_button_cancel">キャンセル</string>
    <string name="all">　</string>
    <string name="detaButton">データ</string>
    <string name="prev"> 前 ≪ </string>
    <string name="next"> ≫ 次 </string>
    <string name="total">総出費：　</string>
    <string name="c1">食費　：　</string>
    <string name="c2">外食　：　</string>
    <string name="c3">日用品　：　</string>
    <string name="c4">嗜好品　：　</string>
    <string name="c5">服・美容　：　</string>
    <string name="c6">交通費　：　</string>
    <string name="c7">教養　：　</string>
    <string name="c8">家族　：　</string>
    <string name="c9">医療　：　</string>
    <string name="c10">通信費　：　</string>
    <string name="c11">光熱費　：　</string>
    <string name="c13">住まい　：　</string>
    <string name="c14">税金　：　</string>
    <string name="c15">保険　：　</string>
    <string name="c16">その他　：　</string>

    <string-array name="categorySpinner">
        <item>食費</item>
        <item>外食</item>
        <item>日用品</item>
        <item>嗜好品</item>
        <item>服・美容</item>
        <item>交通費</item>
        <item>教養</item>
        <item>家族</item>
        <item>医療</item>
        <item>通信費</item>
        <item>光熱費</item>
        <item>住まい</item>
        <item>税金</item>
        <item>保険</item>
        <item>その他</item>
    </string-array>

    <string-array name="paymentSpinner">
        <item>現金</item>
        <item>口座引落</item>
        <item>クレジットカード</item>
        <item>pay</item>
        <item>その他</item>
    </string-array>

</resources>