<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/AddTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/addTitle"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t1" />

        <EditText
            android:id="@+id/day"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="#CBEDFA"
            android:baselineAligned="false"
            android:hint="@string/day"
            android:importantForAutofill="no"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t2" />
        <Spinner
            android:id="@+id/category"
            android:layout_margin="5dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/categorySpinner"
            android:spinnerMode="dialog"
            android:background="#CBEDFA"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t3" />
        <EditText
            android:id="@+id/detail"
            android:layout_margin="5dp"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:background="#CBEDFA"
            android:importantForAutofill="no"
            android:hint="@string/detail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t4" />

        <EditText
            android:id="@+id/memo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="#CBEDFA"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t5" />
        <EditText
            android:id="@+id/money"
            android:layout_margin="5dp"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:background="#CBEDFA"
            android:importantForAutofill="no"
            android:hint="@string/money" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t6" />
        <Spinner
            android:id="@+id/payment"
            android:layout_margin="5dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/paymentSpinner"
            android:spinnerMode="dialog"
            android:background="#CBEDFA"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/executeButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@layout/button_custom"
            android:text="@string/addButton"
            android:onClick="AddExecute" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@layout/button_custom"
            android:text="@string/cancel"
            android:onClick="cancel" />
    </LinearLayout>

</LinearLayout>

