<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center">
       <TextView
           android:id="@+id/previous"
           android:layout_margin="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="25dp"
           android:text="@string/prev" />
       <TextView
           android:id="@+id/month"
           android:layout_margin="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="30dp"/>
       <TextView
           android:id="@+id/next"
           android:layout_margin="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="25dp"
           android:text="@string/next" />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/total"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/total"/>
        <TextView
            android:id="@+id/allSum"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/categoryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</LinearLayout>